@@ -44,3 +44,4 @@ console_scripts =
     deb-scrub-obsolete=lintian_brush.scrub_obsolete:main
     deb-vcs-publish=lintian_brush.publish:main
     deb-upstream-deps=lintian_brush.upstream_deps:main
+    detect-changelog-behaviour=lintian_brush.detect_gbp_dch:main
