@@ -7,6 +7,7 @@ lintian-brush (0.135) UNRELEASED; urgency=medium
   * Add deb-upstream-deps binary.
   * lintian-brush: don't ignore --exclude when there are no fixers
     specified.
+  * Add detect-changelog-behaviour executable.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Tue, 01 Nov 2022 18:10:53 +0000
 
